2014-07-01  Julien Bect  <julien.bect@supelec.fr>

	stk_isdominated.m: New function, returns true for dominated rows.

	* arrays/generic/stk_isdominated.m: New function
	* arrays/generic/private/stk_isdominated_mex.c: New MEX-function
	* misc/include/pareto.h: Add new function is_dominated
	* config/stk_config_makeinfo.m: Compile the new MEX-function
	* admin/octave-pkg/Makefile: Compile the new MEX-function
	* arrays/generic/private/stk_paretofind_mex.c: Modified
	* arrays/generic/stk_paretofind.m: Modified

	stk_figure.m: Do not set the axis title.

	* misc/plot/stk_figure.m: Do not set the axis title.

	stk_plot2d.m: Create labels only if column names are available.

	* misc/plot/stk_plot2d.m: Create labels only if column names are
	available.
	* examples/01_kriging_basics/stk_example_kb03.m: Provide explicit
	column names for the 2d array used in this script.

2014-06-27  Julien Bect  <julien.bect@supelec.fr>

	stk_cholcov.m: Prevent infinite while loops.

	* core/stk_cholcov.m: Prevent infinite while loops, that could
	occur in the case of matrices that either contained NaNs or Infs,
	or were really far from from positive definite.

2014-06-25  Ashwin Ravisankar  <ashwinr1993@gmail.com>

	stk_param_estim.m: Add an optional 'criterion' argument.

	* paramestim/stk_param_estim.m: added new input argument
	criterion that will make it possible, in the future, to select
	which estimation criterion to use.

	stk_param_relik.m: Add a unit test to check the gradient.

	* paramestim/stk_param_relik.m: Add a unit test.

2014-06-19  Ashwin Ravisankar  <ashwinr1993@gmail.com>

	stk_param_gls.m: A new function to compute the GLS estimator.

	* paramestim/stk_param_gls.m: new function
	* paramestim/stk_param_init.m: modified

2014-06-16  Julien Bect  <julien.bect@supelec.fr>

	make_octave_package.m: Parse 'Description' field from README.

	* admin/make_octave_package.m: Modified to parse 'Description'
	field directly from README (avoids text duplication).